<resources>
    <string name="app_name">Kamelia\'s Android Labs</string>
    <string name="hello_message">Hello world!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage" translatable="false">I\'m an EditText</string>
    <string name="hinttext" translatable="false">Write something here</string>
    <string name="question" translatable="false">Do you drink coffee?</string>
    <string name="spin_message" translatable="false">Spin flag</string>
    <string name="emailLabel" translatable="false">Enter your Email address</string>
    <string name="emailHint" translatable="false">Type email here</string>
    <string name="passwordLabel" translatable="false">Type your password</string>
    <string name="passwordHint" translatable="false">Type your password</string>
    <string name="login" translatable="false">Login</string>
    <string name="button_text" translatable="false">butto text</string>


</resources>